Fixing JK background image and setting uncovered area to solid color.

--- a/src/app/assets/stylesheets/kendrick.scss
+++ b/src/app/assets/stylesheets/kendrick.scss
@@ -7,11 +7,10 @@
 
 html {
   body {
-    background-color: $green-gray;
     background: image-url('background-kendrick.png') no-repeat center center fixed;
-    background-size: cover;
     width: $grid-width;
     margin: 0px auto;
     height: 100%;
+    background-color: $green-gray;
   }
 }
